<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuiShouJi</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_input_money">请输入金额</string>
    <string name="str_account">账户</string>
    <string name="str_classes">分类</string>
    <string name="str_tips">备注</string>
    <string name="str_attention">注意</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确定</string>
    
    <string name="str_time_set_finish_date">截止时间</string>
      <string name="str_time_set_timing_date">定时时间</string>
      
      <string name="str_finished">完成</string>
</resources>
