<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_del_friend"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:padding="1dp" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title_custom_dialog"
        android:minHeight="60dp"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_attention"
            android:textColor="@color/grey"
            android:textSize="@dimen/comm_top_title_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tv_request_tip_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_middle_custom_dialog"
        android:minHeight="120dip" >

        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="ddddddddd"
            android:textColor="@color/grey"
            android:textSize="@dimen/comm_top_title_size"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/splite_line" />

    <LinearLayout
        android:id="@+id/default_commit_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_custom_dialog"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_custom_btn_fill"
            android:minHeight="@dimen/custom_dialog_btn_minheight"
            android:singleLine="true"
            android:text="@string/str_cancel"
            android:textColor="@color/grey"
            android:textSize="@dimen/comm_top_title_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/splite_line" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_custom_btn_fill"
            android:minHeight="@dimen/custom_dialog_btn_minheight"
            android:singleLine="true"
            android:text="@string/str_confirm"
            android:textColor="@color/grey"
            android:textSize="@dimen/comm_top_title_size" />
    </LinearLayout>

</LinearLayout>